<resources>
    <string name="app_name">Brand Store</string>
    <string name="addproduct">Add Product</string>
    <string name="updateproduct">Update product </string>
    <string name="addsale">Add sale</string>
    <string name="stocks">Stocks</string>
    <string name="addshipment">Add shipment</string>
    <string name="logout">Logout</string>
    <string name="sale"> Sale</string>
    <string name="cart">cart </string>
    <string name="addcat">Add category</string>
    <string name="home">home</string>
    <string name="view_product">view product</string>
    <string name="profile">profile</string>
    <string name="categories">categories</string>
    <string name="brand">BRAND STORE</string>
    <string name="orders">orders</string>
    <string name="about">about</string>


</resources>